# LidarWorldModel

./: .gitignore  CMakeLists.txt  README.md
configs/profiles/: desktop_dev.yaml
include/wm/adapters/frame_dir/: frame_dir_source.hpp
include/wm/adapters/synth/: synth_frame_source.hpp
include/wm/core/: config.hpp  status.hpp  types.hpp
include/wm/core/events/: event_sink.hpp  jsonl_event_sink.hpp
include/wm/core/io/: frame.hpp  frame_source.hpp
include/wm/core/model/: node_runner.hpp
include/wm/core/util/: config_loader.hpp  repro_hash.hpp
src/adapters/frame_dir/: frame_dir_source.cpp
src/adapters/replay/: replay_reader.cpp
src/adapters/synth/: synth_frame_source.cpp
src/apps/wm_node/: main.cpp
src/core/events/: jsonl_event_sink.cpp
src/core/model/: node_runner.cpp
src/core/util/: config_loader.cpp  repro_hash.cpp
